# pi-workflows

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  SKILL.md  adversarial.json  eval-lean-hard.json  eval.json  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: dependabot.yml
actions/: canonicalize-jsonl.yaml  classify-work.yaml  evidence-synthesis.yaml  exact-item-pipeline.yaml  extract-action-items.yaml  judge-and-refine.yaml  parallel-review.yaml  repo-change.yaml
agents/: openai.yaml
docs/: actions.md  audit-contract.md  integration-contract.md  node-system.md  workflow-format.md
examples/: README.md  catalog.json  pr-review-classify-output.json  pr-review-conditional-blueprint.json  pr-review-peer-blueprint.json  pr-review-select-output.json  product-planning-blueprint.json  replay-corpus.json  workflow-blueprint.json
extensions/: harness-guard.ts  pi-workflows.test.mjs  pi-workflows.ts  stage-result.ts
references/: design-playbook.md  hook-patterns.md  optimization-playbook.md  peer-collaboration.md  pi-capability-map.md  product-planning-harness.md  research-notes.md  workflow-factory.md
schemas/: certification-corpus.schema.json  certification-decision.schema.json  certification-result.schema.json  certification-rubric.schema.json  peer-request.schema.json  peer-response.schema.json  workflow-blueprint.schema.json  workflow.schema.json
scripts/: certify_workflow.py  check.sh  compare_workflow_versions.py  compile_workflow.py  piw.py  (+21 more)
(+34 files in other folders)
