[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-workflows"
version = "0.1.0"
description = "Deterministic YAML workflow graphs for coding agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ali Abassi" }]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6,<7",
    "ruamel.yaml>=0.18,<0.19",
    "jsonschema>=4.23,<5",
]

[project.urls]
Homepage = "https://github.com/ali-abassi/pi-workflows"
Issues = "https://github.com/ali-abassi/pi-workflows/issues"

# piw runs from scripts/ via bin/piw rather than as an installed module, so this
# project is metadata-only: `pip install -e .` resolves dependencies without
# publishing an import surface. Setting py-modules disables package discovery,
# which would otherwise fail on the flat layout.
[tool.setuptools]
py-modules = []
